clusters/vps1/config/grafana/grafana-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: grafana
      protocol: TCP
      port: 3000
      targetPort: grafana
