clusters/vps1/config/grafana/grafana-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: grafana
spec:
  hosts:
  - "grafana-dev.kube.home"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
