clusters/vps1/config/grafana/grafana-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  hostnames:
  - grafana.jkulzer.dev
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: grafana
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
